--- a/estilo.css
+++ b/estilo.css
@@ -15,10 +15,10 @@ h1{
 }
 
 h2{
-   font-weight: 400;
-   font-size: 1.2rem;
-   text-transform: capitalize;
-   margin: 0;
+    font-weight: 400;
+    font-size: 1.2rem;
+    text-transform: capitalize;
+    margin: 0;
 }
 
 img{
@@ -69,7 +69,7 @@ main{
     border-radius: 50px;
     text-decoration: none;
     color: #333;
-    transition: background 500ms ease;
+    transition: background 500ms ease-in-out;
 }
 
 .btn:hover{
@@ -106,6 +106,24 @@ footer{
 footer h3{
     font-size: 3rem;
     margin-bottom: 0;
+}
+
+/* screen sizes 1024px and up */
+
+@media (min-width: 1024px){
+  .arrow-fadeOut{
+    visibility: hidden;
+    opacity: 0.1;
+    transition: 0.5s ease;
+  }
+  .arrow-fadeIn{
+    opacity: 0.8;
+    transition: 0.7s ease;
+  }
+  #arrowBtn:hover{
+    background-color: #779ae6;
+    transition: 0.7s ease-out;
+  }
 }
 
 /* screen sizes 500px and up */
